verify_out.txt
C:\Users\ocuen\Developer\Nezu\homepilot\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Ô¿» Unable to compile TypeScript:
verify_realtime_sync.ts(27,5): error TS2322: Type '"ACTIVE"' is not assignable to type 'DeviceStatus'.

    at createTSError (C:\Users\ocuen\Developer\Nezu\homepilot\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\ocuen\Developer\Nezu\homepilot\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\ocuen\Developer\Nezu\homepilot\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\ocuen\Developer\Nezu\homepilot\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\ocuen\Developer\Nezu\homepilot\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1839:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\ocuen\Developer\Nezu\homepilot\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2322 ]
}
